address some reviewer comments -- discussion still needed for others

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,12 +1,4 @@
 
-@article{_:2021,
-  title = {Crews Working to Repair 31 Water Main Breaks across {{Oklahoma City}}},
-  year = {2021},
-  month = feb,
-  journal = {KFOR.com Oklahoma City},
-  language = {en-US}
-}
-
 @article{Barnes:2013fp,
   title = {Revisiting the Evidence Linking {{Arctic}} Amplification to Extreme Weather in Midlatitudes},
   author = {Barnes, Elizabeth A},
@@ -14,7 +6,7 @@
   month = sep,
   volume = {40},
   pages = {4734--4739},
-  doi = {10/f5dh67},
+  doi = {10.1002/grl.50880},
   journal = {Geophysical Research Letters},
   language = {English},
   number = {17}
@@ -29,7 +21,7 @@
   pages = {1--3},
   publisher = {{Nature Publishing Group}},
   issn = {1758-6798},
-  doi = {10/gg32zh},
+  doi = {10.1038/s41558-020-0741-0},
   copyright = {2020 Springer Nature Limited},
   journal = {Nature Climate Change},
   language = {en}
@@ -51,7 +43,7 @@
   month = aug,
   volume = {7},
   pages = {627--637},
-  doi = {10/f6hdk7},
+  doi = {10.1038/ngeo2234},
   journal = {Nature Geoscience},
   language = {English},
   number = {9}
@@ -76,7 +68,7 @@
   volume = {360},
   pages = {eaas9793},
   issn = {0036-8075, 1095-9203},
-  doi = {10/gdqdjq},
+  doi = {10.1126/science.aas9793},
   journal = {Science},
   language = {en},
   number = {6396}
@@ -89,7 +81,7 @@
   month = jun,
   volume = {7},
   issn = {2328-4277},
-  doi = {10/ghkp9b},
+  doi = {10.1029/2019ef001154},
   journal = {Earth's Future},
   language = {en},
   number = {7},
@@ -120,12 +112,26 @@
 @techreport{ferc_outages:2011,
   title = {Report on Outages and Curtailments during the {{Southwest}} Cold Weather Event},
   shorttitle = {Outages},
-  author = {{FERC} and {NARC}},
+  author = {{FERC} and {NERC}},
   year = {2011},
   month = aug,
   pages = {357},
   institution = {{Federal Energy Regulatory Commission and North American Electric Reliability Corporation}},
   language = {en}
+}
+
+@article{gunter_fishes:1951,
+  title = {Destruction of Fishes and Other Organisms on the {{South Texas Coast}} by the Cold Wave of {{January}} 28-{{February}} 3, 1951},
+  shorttitle = {Fishes},
+  author = {Gunter, Gordon},
+  year = {1951},
+  volume = {32},
+  pages = {731--736},
+  publisher = {{Ecological Society of America}},
+  issn = {00129658, 19399170},
+  doi = {10.2307/1932740},
+  journal = {Ecology},
+  number = {4}
 }
 
 @article{hersbach_era5:2020,
@@ -137,10 +143,8 @@
   pages = {1999--2049},
   issn = {1477-870X},
   doi = {10.1002/qj.3803},
-  annotation = {\_eprint: https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/qj.3803},
   copyright = {\textcopyright{} 2020 The Authors. Quarterly Journal of the Royal Meteorological Society published by John Wiley \& Sons Ltd on behalf of the Royal Meteorological Society.},
   journal = {Quarterly Journal of the Royal Meteorological Society},
-  keywords = {climate reanalysis,Copernicus Climate Change Service,data assimilation,ERA5,historical observations},
   language = {en},
   number = {730}
 }
@@ -173,14 +177,12 @@
   publisher = {{Taylor \& Francis}},
   issn = {0040-1706},
   doi = {10.1080/00401706.1985.10488049},
-  annotation = {\_eprint: https://www.tandfonline.com/doi/pdf/10.1080/00401706.1985.10488049},
   journal = {Technometrics},
-  keywords = {Generalized extreme-value distribution,Hypothesis testing,Order statistics,Probability-weighted moments},
   number = {3}
 }
 
 @techreport{ipcc_ar5:2014,
-  title = {Climate {{Change}} 2014: Synthesis Report. {{Contribution}} of {{Working Groups I}}, {{II}} and {{III}} to the Fifth {{Assessment}} Report of the {{Intergovernmental Panel}} on {{Climate Change}}},
+  title = {Climate Change 2014: Synthesis Report. {{Contribution}} of {{Working Groups I}}, {{II}} and {{III}} to the Fifth {{Assessment}} Report of the {{Intergovernmental Panel}} on {{Climate Change}}},
   shorttitle = {Ar5},
   author = {{IPCC}},
   year = {2014},
@@ -199,7 +201,7 @@
   pages = {2520--2522},
   publisher = {{Oxford Academic}},
   issn = {1367-4803},
-  doi = {10/gd2xzq},
+  doi = {10.1093/bioinformatics/bts480},
   journal = {Bioinformatics},
   language = {en},
   number = {19}
@@ -215,9 +217,10 @@
   eprint = {1912.02382},
   eprinttype = {arxiv},
   journal = {arXiv:1912.02382 [stat]},
-  keywords = {Statistics - Computation},
   primaryclass = {stat}
 }
+% == BibTeX quality report for lee_picar:2019:
+% ? Possibly abbreviated journal title arXiv:1912.02382 [stat]
 
 @article{Lima:2010di,
   title = {Spatial Scaling in a Changing Climate: {{A}} Hierarchical Bayesian Model for Non-Stationary Multi-Site Annual Maximum and Monthly Streamflow},
@@ -226,7 +229,7 @@
   month = mar,
   volume = {383},
   pages = {307--318},
-  doi = {10/dxtdq3},
+  doi = {10.1016/j.jhydrol.2009.12.045},
   journal = {Journal of Hydrology},
   language = {English},
   number = {3-4}
@@ -240,8 +243,7 @@
   volume = {37},
   pages = {2559--2567},
   issn = {1944-7973},
-  doi = {10.1029/2000WR000009},
-  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2000WR000009},
+  doi = {10.1029/2000wr000009},
   copyright = {Copyright 2001 by the American Geophysical Union.},
   journal = {Water Resources Research},
   language = {en},
@@ -255,7 +257,7 @@
   month = jul,
   volume = {29},
   pages = {897--910},
-  doi = {10/f35xrx},
+  doi = {10.1175/jtech-d-11-00103.1},
   journal = {Journal of Atmospheric and Oceanic Technology},
   language = {English},
   number = {7}
@@ -269,16 +271,12 @@
   volume = {319},
   pages = {573--574},
   publisher = {American Association for the Advancement of Science},
-  doi = {10/bsrkbm},
+  doi = {10.1126/science.1151915},
   affiliation = {U.S. Geological Survey (USGS), c/o National Oceanic and Atmospheric Administration (NOAA) Geophysical Fluid Dynamics Laboratory, Princeton, NJ 08540, USA. cmilly@usgs.gov .},
   journal = {Science},
   language = {English},
-  local-url = {file://localhost/Users/james/Google%20Drive/Apps/Papers/Library.papers3/Files/8B/8B37D908-A357-4883-A508-4FBD96C34FE7.pdf},
   number = {5863},
-  pmid = {18239110},
-  rating = {0},
-  read = {Yes},
-  uri = {papers3://publication/doi/10.1126/science.1151915}
+  pmid = {18239110}
 }
 
 @article{money_oklahoma:2021,
@@ -300,14 +298,27 @@
   volume = {38},
   pages = {41-1-41-12},
   issn = {1944-7973},
-  doi = {10.1029/2001WR000502},
-  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2001WR000502},
+  doi = {10.1029/2001wr000502},
   copyright = {Copyright 2002 by the American Geophysical Union.},
   journal = {Water Resources Research},
-  keywords = {extreme value theory,Floods},
   language = {en},
   number = {12}
 }
+
+@inbook{nielsen-gammon_txacc:2011,
+  title = {The Changing Climate of {{Texas}}},
+  shorttitle = {{{TX ACC}}},
+  booktitle = {The {{Impact}} of {{Global Warming}} on {{Texas}}: {{Second Edition}}},
+  author = {Nielsen-Gammon, John W.},
+  year = {2011},
+  month = jun,
+  publisher = {{University of Texas Press}},
+  collaborator = {Schmandt, Jurgen and Clarkson, Judith and North, Gerald R.},
+  isbn = {978-0-292-72330-6},
+  language = {en}
+}
+% == BibTeX quality report for nielsen-gammon_txacc:2011:
+% Missing required field 'chapter/pages'
 
 @article{Screen:2013ho,
   title = {Exploring Links between {{Arctic Amplification}} and Mid-Latitude Weather},
@@ -316,23 +327,21 @@
   month = mar,
   volume = {40},
   pages = {959--964},
-  doi = {10/f4v6vd},
+  doi = {10.1002/grl.50174},
   journal = {Geophysical Research Letters},
   language = {English},
-  local-url = {file://localhost/Users/james/Google%20Drive/Apps/Papers/Library.papers3/Files/2E/2E6C2934-AEC6-4E32-BE1F-307992A05C95.pdf},
-  number = {5},
-  rating = {0},
-  read = {Yes},
-  uri = {papers3://publication/doi/10.1002/grl.50174}
+  number = {5}
 }
 
 @techreport{texaswaterplan:2012,
   title = {Water for {{Texas}} 2012 State Water Plan},
   shorttitle = {Plan},
-  author = {Texas Water Development Board},
+  author = {{Texas Water Development Board}},
   year = {2012},
   month = jan
 }
+% == BibTeX quality report for texaswaterplan:2012:
+% Missing required field 'institution'
 
 @misc{useia_generators:2021,
   title = {Preliminary Monthly Electric Generator Inventory (Based on {{Form EIA}}-{{860M}} as a Supplement to {{Form EIA}}-860)},
@@ -350,6 +359,8 @@
   year = {2021},
   publisher = {{United States Energy Information Administration}}
 }
+% == BibTeX quality report for useia_regions:2021:
+% ? Title looks like it was stored in title-case in Zotero
 
 @article{waite_heating:2020,
   title = {Electricity Load Implications of Space Heating Decarbonization Pathways},
@@ -362,7 +373,6 @@
   issn = {2542-4351},
   doi = {10.1016/j.joule.2019.11.011},
   journal = {Joule},
-  keywords = {alternative fuels,decarbonization,dual source systems,electrification,energy infrastructure,energy systems analysis,heating and cooling},
   language = {en},
   number = {2}
 }
@@ -403,10 +413,28 @@
   volume = {13},
   pages = {074019},
   issn = {1748-9326},
-  doi = {10/ghkp8v},
+  doi = {10.1088/1748-9326/aacb3d},
   journal = {Environmental Research Letters},
   language = {en},
   number = {7}
 }
 
+@article{wu_tx:2021,
+  title = {An Open-Source Model for Simulation and Corrective Measure Assessment of the 2021 {{Texas}} Power Outage},
+  shorttitle = {{{TX}}},
+  author = {Wu, Dongqi and Zheng, Xiangtian and Xu, Yixing and Olsen, Daniel and Xia, Bainan and Singh, Chanan and Xie, Le},
+  year = {2021},
+  month = apr,
+  archiveprefix = {arXiv},
+  eprint = {2104.04146},
+  eprinttype = {arxiv},
+  journal = {arXiv:2104.04146 [physics]},
+  primaryclass = {physics}
+}
+% == BibTeX quality report for wu_tx:2021:
+% ? Possibly abbreviated journal title arXiv:2104.04146 [physics]
+
+
+% Required packages:
+% * textcomp
 
